Update chart docs
